# labofi-sc

./: Anchor.toml  README.md  env.example  package.json
api-docs/: README.md
assets/: test_nft.json
programs/labofi-solana-smart-contract/: Cargo.toml
programs/labofi-solana-smart-contract/src/: lib.rs
scripts/: 0_prepare.ts  1_init_contract.ts  1_mint_nft.ts  2_mint_nft.ts  2_upload_metadata_file.ts  helpers.ts  init_contract.ts  upload_metadata_file.ts
tests/: labofi-solana-smart-contract.ts  sync_program_id.sh
